[gd_scene load_steps=3 format=3 uid="uid://dt4wit8s51vfu"]

[ext_resource type="Script" path="res://Components/Solid Collision/SolidCollider/SolidCollider.gd" id="1_uargl"]
[ext_resource type="PackedScene" uid="uid://cxg58k0408nbg" path="res://Components/Solid Collision/DistanceRaycast/DistanceRaycast.tscn" id="2_0jtlu"]

[node name="SolidCollider" type="Node2D"]
script = ExtResource("1_uargl")

[node name="ColliderRoot" type="Node2D" parent="."]
position = Vector2(0, 4)

[node name="Top" type="Node2D" parent="ColliderRoot"]

[node name="TopExtA" parent="ColliderRoot/Top" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(-6, 0)
target_position = Vector2(0, -36)
distance_offset = 20.0

[node name="TopCenter" parent="ColliderRoot/Top" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
target_position = Vector2(0, -36)
distance_offset = 20.0

[node name="TopExtB" parent="ColliderRoot/Top" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(6, 0)
target_position = Vector2(0, -36)
distance_offset = 20.0

[node name="Bottom" type="Node2D" parent="ColliderRoot"]

[node name="BottomExtA" parent="ColliderRoot/Bottom" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(-8, 0)
target_position = Vector2(0, 36)
distance_offset = 20.0

[node name="BottomCenter" parent="ColliderRoot/Bottom" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
target_position = Vector2(0, 36)
distance_offset = 20.0

[node name="BottomExtB" parent="ColliderRoot/Bottom" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(8, 0)
target_position = Vector2(0, 36)
distance_offset = 20.0

[node name="Left" type="Node2D" parent="ColliderRoot"]

[node name="LeftExtA" parent="ColliderRoot/Left" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(0, -12)
target_position = Vector2(-30, 0)
distance_offset = 14.0

[node name="LeftCenter" parent="ColliderRoot/Left" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
target_position = Vector2(-30, 0)
distance_offset = 14.0

[node name="LeftExtB" parent="ColliderRoot/Left" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(0, 12)
target_position = Vector2(-30, 0)
distance_offset = 14.0

[node name="Right" type="Node2D" parent="ColliderRoot"]

[node name="RightExtA" parent="ColliderRoot/Right" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(0, -12)
target_position = Vector2(30, 0)
distance_offset = 14.0

[node name="RightCenter" parent="ColliderRoot/Right" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
target_position = Vector2(30, 0)
distance_offset = 14.0

[node name="RightExtB" parent="ColliderRoot/Right" instance=ExtResource("2_0jtlu")]
unique_name_in_owner = true
position = Vector2(0, 12)
target_position = Vector2(30, 0)
distance_offset = 14.0

[node name="EditorHint" type="CanvasGroup" parent="."]
position = Vector2(0, 4)

[node name="RectRoot" type="Node2D" parent="EditorHint"]
position = Vector2(-14, -20)

[node name="Rect" type="ColorRect" parent="EditorHint/RectRoot"]
layout_direction = 1
offset_right = 28.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.501961)

[node name="Top" type="Line2D" parent="EditorHint"]
position = Vector2(0, -19.5)
points = PackedVector2Array(-6, 0, 6, 0)
width = 1.0
default_color = Color(1, 1, 0, 1)

[node name="Bottom" type="Line2D" parent="EditorHint"]
position = Vector2(0, 19.5)
points = PackedVector2Array(-8, 0, 8, 0)
width = 1.0
default_color = Color(0, 1, 0, 1)

[node name="Left" type="Line2D" parent="EditorHint"]
position = Vector2(-13.5, 0)
points = PackedVector2Array(0, -12, 0, 12)
width = 1.0
default_color = Color(0, 0, 1, 1)

[node name="Right" type="Line2D" parent="EditorHint"]
position = Vector2(13.5, 0)
points = PackedVector2Array(0, -12, 0, 12)
width = 1.0
default_color = Color(1, 0, 0, 1)
